frontend/test/should_pass/pattern_001.grg
pattern R {
	x:Node -e:Edge-> x;
}

pattern P {
	x:Node;
	x -e:Edge-> y:Node;
}

pattern Q {
	x:Node <-e:Edge- y;
	y:Node;
	r:R();
}

test t {
	x:Node;
	y:Node;
	x -e:Edge-> y;
	p1:P();
	p2:P();
	q:Q();
}

test s {
	x:Node;
	y:Node;
	x -e:Edge-> y;
}
