frontend/test/should_fail/basic_017.grg
test t(-e:Edge->) {
  -e:Edge->;
}
